--- a/Machine_Learning/README
+++ b/Machine_Learning/README
@@ -1,4 +1,4 @@
-Click on the following link to display an HTML render of the notebooks:
+Click on the following links to display an HTML render of the notebooks:
 
 https://nbviewer.jupyter.org/github/moncholv/Bootcamp_KeepCoding_BD-ML/blob/master/Machine_Learning/Practica-1_Ramon_Lerena.ipynb
 
